src/objects/External_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001tZcFEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>R00N30000001tZcHEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Date__c</fullName>
        <description>The Date the Attachment was added to Salesforce</description>
        <inlineHelpText>The Date the Attachment was added to Salesforce</inlineHelpText>
        <label>Attachment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>External Attachments</relationshipLabel>
        <relationshipName>R00N30000001tZcBEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001tZcCEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>File_Access__c</fullName>
        <formula>HYPERLINK(&quot;File://&quot;&amp; File_Path__c &amp; Name, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Path__c</fullName>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N30000001tZcAEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000001tZcEEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PK_CB_ATT_ID__c</fullName>
        <description>This is the Primary Key of the External Attachment (Attachment) from the source Attachment data and maps to ATTACHMENT.ATT_ID  from the Attachment  table in the CB database.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a System Administrator field</inlineHelpText>
        <label>PK_CB_ATT_ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External Attachment</label>
    <nameField>
        <displayFormat>EA-{00000000}</displayFormat>
        <label>External Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Attachments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>